# daedalus

./: .gitignore  ARCHITECTURE.md  BUILD_PHASE_OUTLINES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PIPELINE_PLAN.md  README.md  daedalus.py  environment.yml  pyproject.toml  pytest.ini
Enumeration Code/: loop_diagram_enumeration.py
Field Theory Framework/: field_theory_demo.ipynb  field_theory_sage.py  field_theory_sage_demo.ipynb
api/: __init__.py  _diagrams.py  _expand_cache.py  _grouped_phase_j.py  _mean_field.py  _mean_field_dae.py  _precompute.py  _propagator.py  access.py  colored_to_markovian.py  compute.py  model.py  model_compiler.py  model_serialize.py  model_templates.py  report.py  save.py  spatial_operator_ir.py  theory.py  theory_compiler.py  theory_serialize.py  theory_templates.py
docs/: CHANGELOG.md  General systems we are investigating.docx  Notes for Feynman Paper.docx  PIPELINE_PLAN.md  backend_C_design.md  backend_C_math.md  conductance_vertex_kernels_design.md  correlated_noise_capabilities.md  dendritic_perf_suggestions.md  dyson_duhamel_integration_plan.md  future_directions.md  kpz_burgers_sim_validation.py  m_ge3_precision_bug_audit.md  ou_quartic_large_mu_phase_j_audit.md  pipeline_cleanup_audit.md  prediagram_visualization.md  related_work.md  scalar_mode_field_coercion_fix.md  spatial_analytic_ift_plan.md  spatial_d_ge_2.md  spatial_design_decisions_v1.md  spatial_efficiency_research.md  spatial_generic_pipeline_plan.md  spatial_implementation_plan.md  spatial_kpz_burgers_plan.md  spatial_loop_integral_analytic_mc.md  spatial_phase5_rearchitecture_plan.md  spatial_pipeline.md  spatial_pre_C0_audit.md  spatial_reduction_derivation.md  spatial_stageC5_general_integrator_design.md  spatial_v2_architecture.md  spatiotemporal_convolutions.md  (+2 more)
(+557 files in other folders)
